# aleph

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  client.py  shell.nix
aleph-0/: .gitignore  Makefile
aleph-0/conf/: al02al0.conf  al02ocaml.conf  al0c.conf  ocaml2al0.conf  ocaml2ocaml.conf
aleph-0/src/: .gitignore  Makefile  OCamlMakefile  al0c.ml  lexer.mll  main.ml  parser.mly
aleph-0/src/backend/: asm.ml  asm.mli  emit.ml  emit.mli  virtual.ml
aleph-0/src/backend/filter/emit/: ocaml.ml
aleph-0/src/filter/transform/: ident.ml  ident2.ml
aleph-0/src/frontend/: alpha.ml  alpha.mli  asm.ml  asm.mli  closure.ml  kNormal.ml  kNormal.mli  lexer.mll  parser.mly  syntax.ml  type.ml  typing.ml
aleph-0/src/frontend/reduce/: assoc.ml  beta.ml  constFold.ml  elim.ml  inline.ml
aleph-0/src/utils/: Makefile  filter.ml  syntax.ml  type.ml
aleph-0/test/: testArray.al0  testBool.al0  testFloat.al0  testFor.al0  testFunction.al0  testIf.al0  testInt.al0  testIntSimpl.al0  testString.al0  testVar.al0  testWhile.al0
aleph-0/test/al0/: testFunction.al0  testImport.al0  testInt.al0
aleph-0/test/ocaml/: testInt.ml
conf/: al02al0.conf  al02ocaml.conf  ale2ale.conf  ale2aleWithOptim.conf  ale2bash.conf  ale2java.conf  ale2json.conf  ale2ocaml.conf  ale2ocamlWithOptim.conf  ale2python.conf  default.conf  json2ale.conf  json2json.conf  json2ocaml.conf  json2python.conf  ocaml2al0.conf  ocaml2ale.conf  ocaml2json.conf  ocaml2ocaml.conf  python2json.conf
src/: Makefile  alephc.rs  client.py  main.ml  main.rs  syntax.rs
src/client/: mod.rs
src/filter/: mod.rs
src/filter/parser/: mod.rs
src/filter/parser/ale/: mod.rs
src/filter/parser/javascript/: mod.rs
src/filter/parser/json/: mod.rs
src/filter/parser/python/: mod.rs
src/filter/transform/: mod.rs
src/filter/transform/betareduction/: mod.rs
src/filter/transform/ident/: mod.rs
src/ws/src/: main.rs
test/dataset/ale/: fibonacci.ale  knuth.ale  testArray.ale  testFor.ale  testIf.ale  testMatch.ale
test/dataset/ale/sortAlgo/: quickSort.ale
test/dataset/js/: testBool.js  testFloat.js  testIf.js  testInt.js  testVar.js
test/dataset/json/: simpl.json  testArray.json  testBool.json  testClass.json  testFloat.json  testFor.json  testFunction.json  testIf.json  testImport.json  testInt.json  testMatch.json  testString.json  testVar.json  testWhile.json
test/dataset/json/sortAlgo/: bubbleSort.json
test/dataset/ocaml/: testInt.ml  testVar.ml
test/dataset/python/: hello.py  knuth.py  testIf.py
test/dataset/python/sortAlgo/: bubbleSort.py
(+12 files in other folders)
