[package]
name = "alephc"
version = "1.0.0"
edition = "2021"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3 

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
argparse = "0.2.2"
aleph-syntax-tree = { git = "ssh://git@github.com/aleph-lang/aleph-syntax-tree.git" }
aleparser = { git = "ssh://git@github.com/aleph-lang/aleparser.git" }
python_parser = { git = "ssh://git@github.com/aleph-lang/pythonparser.git" }
js_parser = { git = "ssh://git@github.com/aleph-lang/jsparser.git" }

[features]
"ale_parse" = []
"js_parse" = []
"json_parse" = []
"ale_gen" = []
"java_gen" = []
"json_gen" = []
"ocaml_gen" = []
"python_gen" = []
"rust_gen" = []
"python_parse" = []
"default" = ["ale_gen","json_gen" ,"ale_parse","json_parse" ]

