[package]
name = "alephc"
version = "1.0.0"
edition = "2021"
license-file="LICENSE"
repository="https://github.com/aleph-lang/aleph"
description="Aleph Compiler (or transpiler)."

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3 

[dependencies]
argparse = "0.2.2"
aleph-syntax-tree = "0.1.0"
aleparser = "0.1.1"
ale_python_parser = { git = "ssh://git@github.com/aleph-lang/pythonparser.git" }
js_parser = "0.1.0"
betareduction = "0.1.0"
alegen = "0.1.0"
pythongen = "0.1.0"

[features]
"ale_parse" = []
"js_parse" = []
"json_parse" = []
"python_parse" = []
"ale_gen" = []
"json_gen" = []
"python_gen" = []
"default" = ["ale_gen","json_gen" ,"ale_parse","json_parse" ]

